--- a/index.css
+++ b/index.css
@@ -11,10 +11,6 @@ html, body {
     text-decoration: none;
 }
 
-h1 {
-    text-align: center;
-}
-
 h2 {
     display: block;
     font-weight: bold;
@@ -97,4 +93,22 @@ div {
 body {
     font-family: 'Nunito Sans', sans-serif;
     margin: 0 10%;
+}
+
+.text-panel h1 {
+    font-weight: 700;
+    font-size: 32px;
+    font-family: 'Nunito Sans', sans-serif;
+}
+
+.text-panel h2 {
+    font-weight: 500;
+    font-size: 18px;
+    font-family: 'Poppins', sans-serif;
+}
+
+.text-panel p {
+    font-weight: 400;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
 }
